# uav-drone-detection

./: .gitignore  README.md  TRAINING.md  pyproject.toml
configs/: drone_dataset.colab.yaml  drone_dataset.example.yaml
drone_tracking/: __init__.py  cli.py  detector.py  export.py  models.py  pipeline.py  tracker.py
notebooks/: train_drone_colab.ipynb
scripts/: train_drone_yolo.py
